fixed navbar collapse

--- a/src/app/bs-navbar/bs-navbar.component.css
+++ b/src/app/bs-navbar/bs-navbar.component.css
@@ -1,3 +1,7 @@
 .dropdown-toggle {
     cursor: pointer;
 }
+
+.dropdown:hover .dropdown-menu{
+    display: block;
+}
